--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.2",
     "react-dropdown": "^1.9.2",
     "react-scripts": "^4.0.3",
+    "sweetalert": "^2.1.2",
     "sweetalert2": "^11.0.20"
   },
   "scripts": {
