--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-dropdown": "^1.9.2",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
-    "sweetalert": "^2.1.2",
+    "redux": "^4.1.0",
     "sweetalert2": "^11.0.20"
   },
   "scripts": {
